# langchain-chat-with-data

./: .gitignore  document-loaders.ipynb  document-splitting.ipynb  pyproject.toml  retrieval.ipynb  vector-store.ipynb
